# snpe-reputation-systems

./: .gitignore  Dockerfile  LICENSE  README.md  dep_check.py  docker-compose.yml  environment.yml  pyproject.toml
.github/workflows/: formatting-testing-packaging.yml  formatting-testing.yml  lint-format.yml  lint-formatting.yml  old-testing-workflow.yml  testing-basic.yml  testing-self-hosted-runner.yml  testing-workflow.yml
reputation-systems/simulations/: simulator_class.py
self_hosted_runner/: Dockerfile  entrypoint.sh
snpe_reputation_systems/: sum_a.py
snpe_reputation_systems/notebooks/: experiments_2-3_KL_divergence_and_dif-in-means.ipynb  experiments_2-3_conditional_sampling_and_plotting.ipynb  experiments_2-3_data_preprocessing.ipynb  experiments_2-3_plotting.ipynb
snpe_reputation_systems/snpe_reputation_systems/simulations/: simulator_class.py
snpe_reputation_systems/snpe_reputation_systems/utils/: data_transforms.py  embedding_nets.py  functions.py  statistics.py  tqdm_utils.py
snpe_reputation_systems/tests/: inheritance_test_simulator_class.py  test_simulator_class.py  test_simulator_class_assert.py  test_simulator_class_legacy.py  test_sum.py  test_sum_a.py
