[tool.poetry]
name = "snpe_reputation_systems"
version = "0.0.1"
description = "Dynamic Structural Modeling and Approximate Bayesian Inference of Online Reputation System"
authors = ["Shrabastee Banerjee", "Narendra Mukherjee", "M. Amin Rahimian", "Diego Sanchez", "Fernando Iscar"]
license = "MIT"
repository = "https://github.com/snpe-reputation-systems/snpe-reputation-systems"
readme = "README.md"
keywords = ["reputation", "systems", "marketplace", "simulation"]
packages = [{ include = "snpe_reputation_systems", format = "wheel" }]


[tool.poetry.dependencies]
# python = "3.9.16"
# sbi = "^0.20.0"
# hyperopt = "^0.2.7"
# mlflow = "^2.0.1"
# tqdm = "^4.64.0"
# arviz = "^0.13.0"
# black = "^22.8.0"
# pyreadr = "^0.4.6"
# mypy = "^1.0.0"
# torch = "^1.12.0"
# torchvision = "^0.16.0"
# torchaudio = "^2.1.1"

# automatic management:
python = "^3.9"
numpy = "1.23.1" # newest versions may be problematic
sbi = "*"
hyperopt = "*"
mlflow = "*"
tqdm = "*"
arviz = "*"
black = "*"
pyreadr = "*"
mypy = "*"
torch = "*"
torchvision = "*"
torchaudio = "*"

# to test the package in github actions
# torch = { url = "https://download.pytorch.org/whl/cu116/torch-1.12.0%2Bcu116-cp39-cp39-linux_x86_64.whl"}
# torchvision = { url = "https://download.pytorch.org/whl/cu116/torchvision-0.13.0%2Bcu116-cp39-cp39-linux_x86_64.whl" }
# torchaudio =  { url = "https://download.pytorch.org/whl/cu116/torchaudio-0.12.0%2Bcu116-cp39-cp39-linux_x86_64.whl" }

[tool.poetry.group.test.dependencies]
pytest = "^7.1.1"
hypothesis = "^6.81.2"

[build-system] 
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

